# viser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  ROADMAP.md  STATUS.md  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/veo-chart/: Cargo.toml
crates/veo-chart/src/: lib.rs
crates/veo-checkpoint/: Cargo.toml
crates/veo-checkpoint/src/: lib.rs
crates/veo-cli/: Cargo.toml
crates/veo-cli/src/: main.rs
crates/veo-compare/: Cargo.toml
crates/veo-compare/src/: lib.rs  player.html
crates/veo-complexity/: Cargo.toml
crates/veo-complexity/src/: lib.rs
crates/veo-contextaware/: Cargo.toml
crates/veo-contextaware/src/: lib.rs  profile.rs
crates/veo-encoding/: Cargo.toml
crates/veo-encoding/src/: cleanup.rs  lib.rs  progress.rs
crates/veo-ffmpeg/: Cargo.toml
crates/veo-ffmpeg/src/: cache.rs  encode.rs  lib.rs  path.rs  probe.rs
crates/veo-hull/: Cargo.toml
crates/veo-hull/src/: bdrate.rs  lib.rs
crates/veo-ladder/: Cargo.toml
crates/veo-ladder/src/: fixed.rs  lib.rs
crates/veo-persegment/: Cargo.toml
crates/veo-persegment/src/: lib.rs
crates/veo-pershot/: Cargo.toml
crates/veo-pershot/src/: lib.rs  trellis.rs
crates/veo-pertitle/: Cargo.toml
crates/veo-pertitle/src/: lib.rs
crates/veo-quality/: Cargo.toml
crates/veo-quality/src/: lib.rs
crates/veo-shot/: Cargo.toml
crates/veo-shot/src/: lib.rs
crates/viser/: Cargo.toml  README.md
crates/viser-chart/: Cargo.toml  README.md
crates/viser-chart/src/: lib.rs
crates/viser-checkpoint/: Cargo.toml  README.md
crates/viser-checkpoint/src/: lib.rs
crates/viser-cli/: Cargo.toml  README.md
crates/viser-cli/src/: banner.txt  lib.rs  main.rs
crates/viser-compare/: Cargo.toml  README.md
crates/viser-compare/src/: lib.rs  player.html
crates/viser-complexity/: Cargo.toml  README.md
crates/viser-complexity/src/: lib.rs
crates/viser-contextaware/: Cargo.toml  README.md
crates/viser-contextaware/src/: lib.rs  profile.rs
crates/viser-encoding/: Cargo.toml  README.md
crates/viser-encoding/src/: cleanup.rs  lib.rs  progress.rs
crates/viser-ffmpeg/: Cargo.toml  README.md
crates/viser-ffmpeg/src/: cache.rs  color.rs  encode.rs  hdr.rs  hw_encode.rs  lib.rs  path.rs  probe.rs  probe_revelo.rs
crates/viser-ffmpeg/tests/: fate_10bit.rs  fate_encode.rs  fate_probe.rs  fate_quality.rs
crates/viser-ffmpeg/tests/common/: mod.rs
crates/viser-hull/: Cargo.toml  README.md
crates/viser-hull/src/: bdrate.rs  lib.rs
crates/viser-ladder/: Cargo.toml  README.md
crates/viser-ladder/src/: fixed.rs  lib.rs
crates/viser-metrics/: Cargo.toml
crates/viser-metrics/src/: lib.rs
crates/viser-persegment/: Cargo.toml  README.md
crates/viser-persegment/src/: lib.rs
crates/viser-pershot/: Cargo.toml  README.md
crates/viser-pershot/src/: lib.rs  trellis.rs
crates/viser-pertitle/: Cargo.toml  README.md
crates/viser-pertitle/src/: lib.rs
crates/viser-quality/: Cargo.toml  README.md
crates/viser-quality/src/: lib.rs  noref.rs  pool.rs  scoring.rs
crates/viser-shot/: Cargo.toml  README.md
crates/viser-shot/src/: lib.rs
crates/viser/src/: lib.rs
docs/: README.md  chunked-encoding.md  comparison-player.md  content-adaptive-encoding.md  homebrew.md  per-shot-encoding.md  per-title-encoding.md  quality-metrics.md  rate-control.md  robustness-assessment.md  segment-level-adaptation.md  shot-detection.md  system-design.md
research/: 12-chunked-encoding-collation.md
scripts/: release.sh
