[package]
name = "veo-chart"
version = "0.1.0"
edition = "2024"

[dependencies]
veo-ffmpeg = { path = "../veo-ffmpeg" }
veo-hull = { path = "../veo-hull" }
veo-ladder = { path = "../veo-ladder" }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "bitmap_encoder", "ttf"] }
png = "0.17"
anyhow = { workspace = true }
