[package]
name = "veo-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "veo"
path = "src/main.rs"

[dependencies]
veo-ffmpeg = { path = "../veo-ffmpeg" }
veo-hull = { path = "../veo-hull" }
veo-ladder = { path = "../veo-ladder" }
veo-quality = { path = "../veo-quality" }
veo-encoding = { path = "../veo-encoding" }
veo-pertitle = { path = "../veo-pertitle" }
veo-pershot = { path = "../veo-pershot" }
veo-persegment = { path = "../veo-persegment" }
veo-contextaware = { path = "../veo-contextaware" }
veo-compare = { path = "../veo-compare" }
veo-chart = { path = "../veo-chart" }
veo-shot = { path = "../veo-shot" }
veo-complexity = { path = "../veo-complexity" }
veo-checkpoint = { path = "../veo-checkpoint" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
