[package]
name = "veo-contextaware"
version = "0.1.0"
edition = "2024"

[dependencies]
veo-ffmpeg = { path = "../veo-ffmpeg" }
veo-hull = { path = "../veo-hull" }
veo-ladder = { path = "../veo-ladder" }
veo-encoding = { path = "../veo-encoding" }
veo-pertitle = { path = "../veo-pertitle" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
