[package]
name = "veo-persegment"
version = "0.1.0"
edition = "2024"

[dependencies]
veo-ffmpeg = { path = "../veo-ffmpeg" }
veo-complexity = { path = "../veo-complexity" }
veo-quality = { path = "../veo-quality" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
