[package]
name = "viser-chart"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Chart generation for viser (R-D curves, convex hull visualizations, ladder charts)"
keywords = ["chart", "plot", "visualization", "rate-distortion", "video"]
categories = ["visualization", "multimedia::images"]

[lib]
name = "viser_chart"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.9.0" }
viser-hull = { path = "../viser-hull", version = "0.9.0" }
viser-ladder = { path = "../viser-ladder", version = "0.9.0" }
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend",
    "line_series",
    "bitmap_encoder",
    "ttf",
] }
png = "0.17"
anyhow = { workspace = true }
