[package]
name = "viser-checkpoint"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Checkpoint/resume support for long-running viser analyses"
keywords = ["checkpoint", "resume", "video", "encoding", "cache"]
categories = ["multimedia::encoding", "caching"]

[lib]
name = "viser_checkpoint"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-hull = { path = "../viser-hull", version = "0.6.0" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[dev-dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.6.0" }
