[package]
name = "viser-cli"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for viser - Video Encoding Optimizer"
keywords = ["video", "encoding", "vmaf", "ffmpeg", "ladder"]
categories = [
    "command-line-utilities",
    "multimedia::video",
    "multimedia::encoding",
]

[[bin]]
name = "viser"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.8.0" }
viser-hull = { path = "../viser-hull", version = "0.8.0" }
viser-ladder = { path = "../viser-ladder", version = "0.8.0" }
viser-quality = { path = "../viser-quality", version = "0.8.0" }
viser-metrics = { path = "../viser-metrics", version = "0.8.0" }
viser-encoding = { path = "../viser-encoding", version = "0.8.0" }
viser-pertitle = { path = "../viser-pertitle", version = "0.8.0" }
viser-pershot = { path = "../viser-pershot", version = "0.8.0" }
viser-persegment = { path = "../viser-persegment", version = "0.8.0" }
viser-contextaware = { path = "../viser-contextaware", version = "0.8.0" }
viser-compare = { path = "../viser-compare", version = "0.8.0" }
viser-chart = { path = "../viser-chart", version = "0.8.0" }
viser-shot = { path = "../viser-shot", version = "0.8.0" }
viser-complexity = { path = "../viser-complexity", version = "0.8.0" }
viser-checkpoint = { path = "../viser-checkpoint", version = "0.8.0" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"

[features]
revelo = ["viser-ffmpeg/revelo"]
