[package]
name = "viser-compare"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser-based side-by-side comparison player with VMAF timeline for viser"
keywords = ["vmaf", "compare", "video", "player", "quality"]
categories = ["multimedia::video", "web-programming"]

[lib]
name = "viser_compare"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util"] }
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.7.0" }
