[package]
name = "viser-complexity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial/temporal/DCT complexity analysis for viser"

[lib]
name = "viser_complexity"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.1.0" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
