[package]
name = "viser-complexity"
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial/temporal/DCT complexity analysis for viser"
keywords = ["complexity", "video", "dct", "entropy", "analysis"]
categories = ["multimedia::video", "algorithms", "computer-vision"]

[lib]
name = "viser_complexity"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.5.1" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
