[package]
name = "viser-contextaware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Device-specific ladder generation for viser"
keywords = ["abr", "device", "ladder", "streaming", "video"]
categories = ["multimedia::encoding", "multimedia::video"]

[lib]
name = "viser_contextaware"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.1.0" }
viser-hull = { path = "../viser-hull", version = "0.1.0" }
viser-ladder = { path = "../viser-ladder", version = "0.1.0" }
viser-encoding = { path = "../viser-encoding", version = "0.1.0" }
viser-pertitle = { path = "../viser-pertitle", version = "0.1.0" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
