[package]
name = "viser-encoding"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared encoding configuration, preset mapping, temp cleanup for viser"

[lib]
name = "viser_encoding"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.1.0" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
