[package]
name = "viser-encoding"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared encoding configuration, preset mapping, temp cleanup for viser"
keywords = ["encoding", "video", "preset", "codec", "config"]
categories = ["multimedia::encoding", "multimedia::video"]

[lib]
name = "viser_encoding"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.6.1" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
