[package]
name = "viser-ffmpeg"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFmpeg/FFprobe wrapper for viser"
keywords = ["ffmpeg", "ffprobe", "video", "encoding", "transcode"]
categories = ["multimedia::video", "multimedia::encoding"]

[lib]
name = "viser_ffmpeg"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
