[package]
name = "viser-ffmpeg"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFmpeg/FFprobe wrapper for viser"
keywords = ["ffmpeg", "ffprobe", "video", "encoding", "transcode"]
categories = ["multimedia::video", "multimedia::encoding"]

[lib]
name = "viser_ffmpeg"
path = "src/lib.rs"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["rt", "process", "io-util", "sync", "macros", "rt-multi-thread"] }
viser-quality = { path = "../viser-quality" }

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "io-util", "sync"] }
tracing = { workspace = true }

[features]
revelo = ["dep:revelo"]

[dependencies.revelo]
version = "0.4"
optional = true
default-features = false
