[package]
name = "viser-hull"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Convex hull (Pareto frontier) and BD-Rate computation for viser"

[lib]
name = "viser_hull"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.1.0" }
serde = { workspace = true }
