[package]
name = "viser-hull"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Convex hull (Pareto frontier) and BD-Rate computation for viser"
keywords = ["convex-hull", "pareto", "bd-rate", "rate-distortion", "video"]
categories = ["algorithms", "mathematics", "multimedia::encoding"]

[lib]
name = "viser_hull"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.1.0" }
serde = { workspace = true }
