[package]
name = "viser-ladder"
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bitrate ladder selection with crossover enforcement for viser"
keywords = ["bitrate", "ladder", "abr", "video", "encoding"]
categories = ["algorithms", "multimedia::encoding", "multimedia::video"]

[lib]
name = "viser_ladder"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.10.0" }
viser-hull = { path = "../viser-hull", version = "0.10.0" }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
