[package]
name = "viser-persegment"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Segment-level CRF adaptation with closed-loop VMAF verification for viser"
keywords = ["crf", "segment", "vmaf", "video", "encoding"]
categories = ["multimedia::encoding", "multimedia::video", "algorithms"]

[lib]
name = "viser_persegment"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.9.0" }
viser-complexity = { path = "../viser-complexity", version = "0.9.0" }
viser-quality = { path = "../viser-quality", version = "0.9.0" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tempfile = "3"
