[package]
name = "viser-pershot"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-shot encoding with Trellis bit allocation for viser"
keywords = ["per-shot", "trellis", "video", "encoding", "bitrate"]
categories = ["multimedia::encoding", "multimedia::video", "algorithms"]

[lib]
name = "viser_pershot"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.2.0" }
viser-hull = { path = "../viser-hull", version = "0.2.0" }
viser-ladder = { path = "../viser-ladder", version = "0.2.0" }
viser-encoding = { path = "../viser-encoding", version = "0.2.0" }
viser-pertitle = { path = "../viser-pertitle", version = "0.2.0" }
viser-shot = { path = "../viser-shot", version = "0.2.0" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
