[package]
name = "viser-pertitle"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-title encoding pipeline with convex hull analysis for viser"
keywords = ["per-title", "video", "encoding", "vmaf", "ladder"]
categories = ["multimedia::encoding", "multimedia::video", "algorithms"]

[lib]
name = "viser_pertitle"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.2.1" }
viser-hull = { path = "../viser-hull", version = "0.2.1" }
viser-ladder = { path = "../viser-ladder", version = "0.2.1" }
viser-quality = { path = "../viser-quality", version = "0.2.1" }
viser-encoding = { path = "../viser-encoding", version = "0.2.1" }
viser-checkpoint = { path = "../viser-checkpoint", version = "0.2.1" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
