[package]
name = "viser-quality"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "VMAF/PSNR/SSIM quality measurement for viser"
keywords = ["vmaf", "psnr", "ssim", "video", "quality"]
categories = ["multimedia::video", "algorithms"]

[lib]
name = "viser_quality"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.4.1" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tracing = { workspace = true }
tempfile = "3"
