[package]
name = "viser-shot"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shot/scene detection for viser using FFmpeg scdet"
keywords = ["scene-detection", "shot", "video", "ffmpeg", "scdet"]
categories = ["multimedia::video", "computer-vision", "multimedia::encoding"]

[lib]
name = "viser_shot"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
viser-ffmpeg = { path = "../viser-ffmpeg", version = "0.4.2" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }

[dev-dependencies]
serde_json = { workspace = true }
